[project]
name = "concept-graphs"
version = "0.0.0"
dependencies = [
    "torch",
    "torchvision",
    "jax[cuda12]>=0.6.2",
    "flax>=0.10.7",
    "polars",
    "open3d",
    "hydra-core>=1.3.2",
    "mobile_sam@git+https://github.com/ChaoningZhang/MobileSAM.git",
    "open_clip_torch",
    "ultralytics",
    "openai",
    "numpy==2.1.2",
    "sam3@git+https://github.com/kumaradityag/sam3.git",
    "einops",
    "decord",
    "pycocotools",
    "rgbd-dataset",
    "ipdb>=0.13.13",
    "viser>=1.0.16",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black"]


[tool.setuptools]
py-modules = []

[tool.uv.workspace]
members = [
    "rgbd_dataset",
    ".",
    "perpetua2",
]

[tool.uv.sources]
rgbd-dataset = { workspace = true }
concept-graphs = { workspace = true, editable = true }
perpetua2 = { workspace = true }

[dependency-groups]
dev = [
    "concept-graphs",
    "perpetua2",
]
